[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/monkey.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Prism.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Note.tscn" type="PackedScene" id=5]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, -1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="Environment" id=5]

[sub_resource type="PlaneMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.72549, 0.72549, 0.72549, 1 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Ground" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( 15, 0, 0, 0, 1, 0, 0, 0, 15, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Ground"]

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody"]
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.86409 )

[node name="Monkey" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Prism" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35736, 1.16154, 0 )

[node name="Cube" type="Spatial" parent="."]
editor/display_folded = true

[node name="MeshInstance" type="MeshInstance" parent="Cube"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.5, 0.5, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Cube/MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="Cube/MeshInstance/StaticBody"]
shape = SubResource( 4 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="InspectItemName" type="Panel" parent="UI"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_top = 20.0
margin_right = 180.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="UI/InspectItemName"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
align = 1

[node name="InspectCamera" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.75535, -19.898 )

[node name="SpotLight" type="SpotLight" parent="InspectCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.48732 )
spot_angle_attenuation = 0.554785

[node name="Camera" type="Camera" parent="InspectCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.48732 )
environment = SubResource( 5 )
fov = 30.0
near = 0.1
far = 4.0

[node name="Item" type="Spatial" parent="InspectCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.27883 )

[node name="MeshInstance" type="MeshInstance" parent="InspectCamera"]
transform = Transform( 2, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Note" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.730915, -0.682468, -2.98316e-008, 0, -4.37114e-008, 1, -0.682468, -0.730915, -3.19493e-008, -1.172, 1.00963, 0.445562 )
[connection signal="inspect" from="Player" to="." method="_on_Player_inspect"]
